syntax = "proto3";
package orders;

import "gogoproto/gogo.proto";
import "modules/orders/internal/mappable/mappable.proto";
import "schema/parameters/base/parameterList.proto";

message Genesis {
  option (gogoproto.goproto_getters) = false;

  repeated Mappable mappables = 1;
  parameters.ParameterList parameterList = 2;
}